chore: cleanup unnessecary files from src

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website</title>
+    <title>Bookmark-Saver</title>
 
     <!-- Loading in Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,10 +13,6 @@
       rel="stylesheet"
     />
     <link rel="icon" href="assets/icons/webicon.png" type="image/x-icon">
-    <!-- CSS Stylesheets-->
-    <link rel="stylesheet" href="src/normalize.css" />
-    <link rel="stylesheet" href="src/variables.css" />
-    <link rel="stylesheet" href="src/utilities.css" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
