--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookmark Saver</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="icon" href="assets/icons/webicon.png" type="image/x-icon">
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="app-container">
       <h1>Bookmark Saver</h1>
-      <div class="input-containe">
+      <div class="input-container">
         <input type="text" id="bookmark-name" placeholder="Bookmark Name">
         <input type="url" id="bookmark-url" placeholder="Bookmark URL">
         <button type="button" id="add-bookmark">Add Bookmark</button>
